--- a/MVCSSLV/.settings/org.eclipse.wst.common.component
+++ b/MVCSSLV/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="java2">
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <property name="java-output-path" value="/java2/build/classes"/>
         <property name="context-root" value="java2"/>
     </wb-module>
