--- a/MVCSSLV/.settings/org.eclipse.wst.common.component
+++ b/MVCSSLV/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="java2">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/classes"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="java2"/>
         <property name="java-output-path" value="/java2/target/classes"/>
     </wb-module>
