--- a/MVCSSLV/.settings/org.eclipse.wst.common.component
+++ b/MVCSSLV/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/webapp/web.xml"/>
         <property name="context-root" value="java2"/>
         <property name="java-output-path" value="/java2/target/classes"/>
     </wb-module>
