--- a/MVCSSLV/.settings/org.eclipse.wst.common.component
+++ b/MVCSSLV/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/webapp/web.xml"/>
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/java/net/voaideahost/sslv/web.xml"/>
         <property name="context-root" value="java2"/>
         <property name="java-output-path" value="/java2/target/classes"/>
     </wb-module>
