--- a/MVCSSLV/WebContent/css/Application.css
+++ b/MVCSSLV/WebContent/css/Application.css
@@ -38,8 +38,17 @@ div.footer {
 
 .cw-FlexTable-main-list {
 	margin: 5px;
-	background-color: #009966;
+	border-collapse: collapse;
 	color: white;
+}
+
+.cw-FlexTable-main-list td {
+	border: 1px solid green;
+}
+
+.cw-FlexTable-main-list td:hover {
+	font-weight: bold;
+	background-color: #99FFCC;
 }
 
 .cw-FlexTable-navigation {
