--- a/MVCSSLV/WebContent/css/Application.css
+++ b/MVCSSLV/WebContent/css/Application.css
@@ -19,8 +19,8 @@ div.footer {
 }
 
 .cw-FlexTable {
-	margin: 5px;
-	border-collapse: collapse;
+	  border-collapse: collapse;
+      margin: 5px;
 }
 
 .cw-FlexTable td {
@@ -28,8 +28,7 @@ div.footer {
 }
 
 .cw-FlexTable-view-edit-box {
-	margin: 5px;
-	border-collapse: collapse;
+	margin: 1px;
 }
 
 .cw-FlexTable-view-edit-box td {
@@ -37,29 +36,31 @@ div.footer {
 }
 
 .cw-FlexTable-main-list-th {
-	margin: 5px;
 	border-collapse: collapse;
+    margin: 5px;
 	color: white;
 }
 
 .cw-FlexTable-main-list-th td {
-	border: 1px solid green;
 	background-color: #009966;
+	border: 1px solid green;
 }
 
 .cw-FlexTable-main-list-tr {
-	margin: 5px;
 	border-collapse: collapse;
+    margin: 5px;
 	color: black;
 }
 
-.cw-FlexTable-main-list-tr td:hover {
-	font-weight: bold;
+.cw-FlexTable-main-list-tr td {
+	border: 1px solid green;
+}
+
+.cw-FlexTable-main-list-tr tr:hover {
 	background-color: #99FFCC;
 }
 
 .cw-FlexTable-navigation {
-	margin: 5px;
 	background-color: #99CC33;
 	color: white;
 }
@@ -77,7 +78,6 @@ div.footer {
 }
 
 .cw-FlexTable-footer {
-	margin: 5px;
 	background-color: #99CC33;
 	color: white;
 }
