--- a/MVCSSLV/WebContent/css/Application.css
+++ b/MVCSSLV/WebContent/css/Application.css
@@ -28,11 +28,14 @@ div.footer {
 }
 
 .cw-FlexTable-view-edit-box {
-	margin: 1px;
+	border-collapse: collapse;
+	color: black;
+	margin: 5px;
 }
 
 .cw-FlexTable-view-edit-box td {
-	border: 0px;
+	border: 1px solid white;
+	background-color: white;
 }
 
 .cw-FlexTable-main-list-th {
@@ -78,12 +81,14 @@ div.footer {
 }
 
 .cw-FlexTable-footer {
+	margin: 5px;
 	background-color: #99CC33;
 	color: white;
 }
 
 .cw-FlexTable-footer td {
 	text-align: right;
+	border: 1px solid green;
 }
 
 a:link {
